feat: added filters

--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-size: larger;
 }
 /*# sourceMappingURL=App.css.map */
