--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -9,8 +9,10 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 360px;
   background-color: lightblue;
   border: 1px solid gray;
+  padding: 10px;
 }
 
 .todo_item__completed {
@@ -27,5 +29,7 @@
   background-color: lightgray;
   border: 1px solid gray;
   text-decoration: line-through;
+  padding: 10px;
+  width: 360px;
 }
 /*# sourceMappingURL=TodoItem.css.map */
