--- a/src/components/TodoItem/TodoItem.scss
+++ b/src/components/TodoItem/TodoItem.scss
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 360px;
     background-color: lightblue;
     border: 1px solid gray;
+    padding: 10px;
 }
 
 .todo_item__completed {
@@ -13,4 +15,6 @@
     background-color: lightgray;
     border: 1px solid gray;
     text-decoration: line-through;
+    padding: 10px;
+    width: 360px;
 }
