--- a/src/components/TodoItem/TodoItem.scss
+++ b/src/components/TodoItem/TodoItem.scss
@@ -2,9 +2,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 360px;
+    width: 350px;
     background-color: lightblue;
     border: 1px solid gray;
+    box-sizing: border-box;
     padding: 10px;
 }
 
@@ -15,6 +16,7 @@
     background-color: lightgray;
     border: 1px solid gray;
     text-decoration: line-through;
+    width: 350px;
+    box-sizing: border-box;
     padding: 10px;
-    width: 360px;
 }
